--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IT HUB</title>
+
+    <!-- css links-->
+
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="m(320).css"
+      class=""
+      media="screen and (min-width: 320px)"
+    />
+
+    <!-- css links -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
