mobile responsive done

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
       media="screen and (min-width: 320px)"
     />
 
+    <link
+      rel="stylesheet"
+      href="m(375).css"
+      class=""
+      media="screen and (min-width: 375px)"
+    />
+    <link
+      rel="stylesheet"
+      href="m(480).css"
+      class=""
+      media="screen and (min-width: 480px)"
+    />
+
     <!-- css links -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
